--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </div>
       </div>
     </center>
+    <script src='bower_components/fetch/fetch.js'></script>
     <script src='nsa.js'></script>
   </body>
 </html>
