Fix link ..now to a web archive of when Disney was more respectful towards striped animals

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div id='content'>
           <p><strong>Your updates on the most terrible hacks around the world!</strong> Here to help cover the drastic situations around the world by raising awareness of the horrible, greedy, selfish hackers all around the world.</p>
-          <p><i><small>May or may not be affiliated with some hackers, depending on your perspective. Not actually designed to show you what "hackers" "really are", but rather as a joke to a few people. Please don't become <a href='https://www.disneyclips.com/imagesnewb/images/cliptiggerhappy.gif'>striped animal</a>'d, for using the word "hacker" this way, okay? It's just a word :)</small></i></p>
+          <p><i><small>May or may not be affiliated with some hackers, depending on your perspective. Not actually designed to show you what "hackers" "really are", but rather as a joke to a few people. Please don't become <a href='http://web.archive.org/web/20160806195714/http://www.disneyclips.com/imagesnewb/images/cliptiggerhappy.gif'>striped animal</a>'d, for using the word "hacker" this way, okay? It's just a word :)</small></i></p>
         </div>
       </div>
     </center>
